# MyHoloCubic

./: .gitignore  CMakeLists.txt  IO.txt  README.md  esp-idf_version.txt  upload_firmware.bat
components/lv_examples/: CMakeLists.txt
drawing/: clock_pointer.py
main/: CMakeLists.txt  main.c
main/modules/: myconfig.h
main/modules/GUI/clock/: clock.c
main/modules/GUI/include/: clock.h
main/modules/SDCard/: sdcard.c  sdcard.h  sdmmc.c  sdmmc.h
main/modules/gpio/: input.c  input.h
main/modules/http/: myhttp.h  myhttp_client.c
main/modules/module_test/: crc_tst.c  crc_tst.py  interactive_tst.c  makefile  script.txt  script_tst.c
main/modules/mpu6050/: mpu.c  mpu.h
main/modules/ota/: ota.c  ota.h
main/modules/protocol_examples_common/: connect.c
main/modules/protocol_examples_common/include/: protocol_examples_common.h
main/modules/script_engine/: commands.c  interactive.c  parser.c  script_engine.h  script_utils.c  script_utils.h
main/modules/wifi/: wifi_sta.c  wifi_sta.h
